Default state done with lockin prevention

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.6.0 M
 
 2019-11-28 Will
 * Began state machine for all session managment.
+* Default state done with lockin prevention.
 
 2019-11-27 Will
 * Added version numbering to the banks file.
