State fully integrated in session management Jack session almost completly done

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.6.0 M
 
+2019-11-29 Will
+* State fully integrated in session management.
+* Jack session almost completly done.
+  Seem to have broken saving :(
+
 2019-11-28 Will
 * Began state machine for all session managment.
 * Default state done with lockin prevention.
