--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.6.0 M
 
+2019-12-01 Will
+* Found way to defer UUid message after setup.
+
 2019-11-29 Will
 * State fully integrated in session management.
 * Jack session almost completly done.
