--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 1.6.0 M
+yoshimi 1.6.1 rc1
+
+2019-12-02 Will
+* yoshimi.state auto-moved to yoshimi-0.state.
+* Updated local copy of user manual.
+* Set version as 1.6.1 rc1
 
 2019-12-01 Will
 * Found way to defer UUid message after setup.
