--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.6.1 rc1
 
+2019-12-10 Will
+* Updated documentation.
+
 2019-12-02 Will
 * yoshimi.state auto-moved to yoshimi-0.state.
 * Updated local copy of user manual.
