Small adjustment to User manual

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 1.6.1
+yoshimi 1.6.1 M
+
+2019-12-21 Will
+* Small adjustment to User manual.
+* Updated ToDo list.
+* Set version as 1.6.1 M
 
 2019-12-15 Will
 * Minor text/info corrections and updates
