--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.6.1 M
 * Made slider knobs respond to mouse clicks.
   Why was this missed for so long?
 * Added names to Yoshimi Control Numbers.ods
+* Doc updates.
 
 2019-12-28 Will
 * Removed modal from instrument search window.
