--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.7.0 rc6
 
+2020-1-9 Will
+* Corrected jack autoconnect.
+* Updated user manual.
+
 2020-1-8 Will
 * Fixed regression. Some startup arguments not seen.
 * Other refinements to config files.
