Building bank root uses new listDir( Revised bank and file permissions

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 1.7.0.1
+yoshimi 1.7.0 M
+
+2020-2-1 Will
+* Building bank root uses new listDir(
+* Revised bank and file permissions.
 
 2020-1-31 Will
 * Changed .bankdir references in Bank( to validBank label.
