:rebank:  basic structure mostly copmplete

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.7.0 M
 
+
+2020-2-4 Will
+:rebank:  basic structure mostly copmplete.
+Testing for defects and redundant code.
+
 2020-2-3 Will
 :rebank:  basic structure now in place.
 
