--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,10 @@
 yoshimi 1.7.0 M
 
-2020-2-8 Will
+2020-2-9 Will
+* More revision of banks code.
+  Still some startup anomallies.
 
+2020-2-8 Will
 * Corrected CLI not setting bank from top level.
 * Further improvements to missing root/bank handling.
 * Transfer of default banks to .local in place.
