--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.7.0 M
 
+2020-2-13 Will.
+* BugFix: MIDI-learn crash if accessing non-exisitent effect.
+  This need more work to correctly report to the CLI.
+
 2020-2-11 Will
 * Corrected MIDI-Learn save title bar.
 * New bank structure almost complete.
