--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,3 +1,4 @@
+BUG! Trying to access a MIDI-learned part effect that no longer exists crashes.
 
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
 
