--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ yoshimi 1.7.0 M
 
 2020-3-1 Will
 * Improved code for spacing new bank IDs.
+* BugFix: LV2 not updating MIDI-learn GUI.
+  Reinstated original window control, but now with
+  correct action being set!
 
 2020-2-17 Will
 * Implemented Hyperbolic Secant Waveform option.
