--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.7.0 M
 2020-3-3 Will
 * Merged in various fixes from Iain.
 * BugFix: not closing directories after use :(
+* Revised file/directory copying.
+  Options are now: always write, only missing, only newer
 
 2020-3-1 Will
 * Improved code for spacing new bank IDs.
