--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.7.0 M
 
+2020-3-15 Will
+* Created GUI for PolyAT.
+  Can't yet run two effects at the same time.
+* PolyAT saved in patch sets.
+
 2020-3-12 Will
 * Small refinements to PolyAT.
 
