Completed Channel aftertouch

--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.7.0 M
 * Merged in revised legato code from Iain.
 * Implemented Channel aftertouch.
   More to do on this.
+* Completed Channel aftertouch.
 
 2020-3-17 Will
 * Implemented Modulation PolyAT.
