Second attempt at completion

--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.7.0 M
 * Implemented Channel aftertouch.
   More to do on this.
 * Completed Channel aftertouch.
+* Second attempt at completion :(
 
 2020-3-17 Will
 * Implemented Modulation PolyAT.
