First trial of improved GUI window positioning

--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,8 @@ yoshimi 1.7.0 M
 * Temporarily disabled hiding engine type colours.
   Related code will be removed later if no objections.
 * Unified GUI numbering of config window files.
+* First trial of improved GUI window positioning.
+  Only controller windows so far.
 
 2020-3-26 Will
 * Aftertouch fully MIDI-learnable.
