--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.7.0 M
 
+2020-3-29 Will
+* Fixed regresssion. Loading MIDIlearn not displaying.
+* MIDIlearn and Vector added to improved GUI windowing.
+
 2020-3-28 Will
 * Merged in panning law control.
 * Added 'Yet Another Flute" to 'Companion' bank.
