--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.7.0 M
 
+2020-4-6 Will
+* Added presets broweser to remembered positions.
+* Disabled aftercouch emulation.
+* Added Stefaan to Yoshimi_Helpers.
+
 2020-4-2 Will
 * More refimentments to the text messaging and actions.
   Not yet available to the CLI.
