Doc updates - no code changes

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.1 rc1
 
+2020-4-13 Will
+* Doc updates - no code changes.
+
 2020-4-11 Will
 * Aftertouch Modulation temporarily hidden.
   Not satisfied with it's operation.
