--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.7.1 rc3
 
+2020-4-18 Will
+* BugFix: Segfault due to change in commit
+  817fbc6ea91a064839eebae1f54efc20753cb927
+  Only seen by 1 person so far.
+
 2020-4-17 Will
 * Changed PART_POLY to PART_NORMAL.
   It could be confused with PART_POLIPHONY.
