Confirming Bugfixes Further doc updates Set version as 1.7.1 rc4

--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,13 @@
-yoshimi 1.7.1 rc3
+yoshimi 1.7.1 rc4
 
 2020-4-18 Will
 * BugFix: Segfault due to change in commit
   817fbc6ea91a064839eebae1f54efc20753cb927
   Only seen by 1 person so far.
 * Trapped rogue dir in file list for directory copy.
+* Confirming Bugfixes.
+* Further doc updates.
+* Set version as 1.7.1 rc4
 
 2020-4-17 Will
 * Changed PART_POLY to PART_NORMAL.
