--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.1 M
 
+2020-4-24 Will
+* Further work on incompatible file recognition.
+
 2020-4-23 Will
 * Confirmed Modulator improvements from Kristian.
 * Started recognition of default and changed zyn files.
