--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.1 M
 
+2020-4-29 Will
+* Initialisation and memory leak fixes found by Stefaan.
+
 2020-4-26 Will
 * Further work on incompatible file recognition.
 
