--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.7.1 M
 * Initialisation and memory leak fixes found by Stefaan.
 * Reverted hidden buttons in instance > 0 bank windows.
   It was causing confusion especially for LV2 users.
+* Added bold highlight for last instrument load from bank.
 
 2020-4-26 Will
 * Further work on incompatible file recognition.
