--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 yoshimi 1.7.1 M
 
-2020-4-29 Will
+2020-5-1 Will
+* BugFix: new highlight not recognised for higher numbers.
+  Loss of precision.
+* Removed highlight from MIDI - possible race.
+
+2020-4-30 Will
 * Latest instrument now recognised by CLI.
 * Saving to bank also recognised as latest.
 * More refinements to BankUI.
