--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.7.1 M
 * BugFix: new highlight not recognised for higher numbers.
   Loss of precision.
 * Removed highlight from MIDI - possible race.
+* Added switch in config to enable/disable highlighting.
+  Default is 'off'.
 
 2020-4-30 Will
 * Latest instrument now recognised by CLI.
