BugFix: Disabled oscillator window saving caused segfaults

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.1 M
 
+2020-5-9 Will
+* BugFix: Disabled oscillator window saving caused segfaults.
+
 2020-5-4 Will
 * BugFix: CLI not responding to engine on/off.
   Caused by aftertouch controls shifing part enable.
