enforcenotelimit now loops to remove all older notes

--- a/Changelog
+++ b/Changelog
@@ -5,7 +5,8 @@ yoshimi 1.7.1 M
 * Refactored noteoff code.
 * Refactored and changed setnotelimit to enforcenotelimit.
   This still isn't corrected when changing the key limit
-  downwards by more than one as it only removes the oldeest.
+  downwards by more than one as it only removes the oldest.
+* enforcenotelimit now loops to remove all older notes :)
 
 2020-5-9 Will
 * Merged GUI fixes from Kristian.
