Separated remaining CLI controls and deleted partCommon

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.7.1 M
 2020-5-20 Will
 * Separated out CLI SubSynth and PadSynth overtones.
 * Separated out CLI de-pop and punch.
+* Separated remaining CLI controls and deleted partCommon
 
 2020-5-19 Will
 * Fixed regression CLI not enabling PadSyth.
