Added line in AddNote.cpp ring mod code for amp mod

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.7.1 M
 
+2020-6-5 Will
+* Added line in AddNote.cpp ring mod code for amp mod.
+  Commented out, but there for trials.
+
 2020-6-4 Will
 * First trial of AddSynth Gobal random width control.
   Has partial legacy compatibility.
