--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.7.1 M
 * Added line in AddNote.cpp ring mod code for amp mod.
   Commented out, but there for trials.
 * General cleanups and removed reduntant code.
+* BugFix: Request for invalid root reports, but still sets it!
 
 2020-6-4 Will
 * First trial of AddSynth Gobal random width control.
