Trial of PadSynth random width control done

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.7.1 M
 
 2020-6-5 Will
+* Trial of PadSynth random width control done.
+
+2020-6-5 Will
 * Added line in AddNote.cpp ring mod code for amp mod.
   Commented out, but there for trials.
 * General cleanups and removed reduntant code.
