--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 yoshimi 1.7.1 M
 
-2020-6-5 Will
+2020-6-7 Will
+* Random pan width enabled for CLI.
+
+2020-6-6 Will
 * Trial of PadSynth random width control done.
 * Trial of SubSynth random width control done.
 * Added forgotten PadSynth random load and save :(
