Unified CLI panning controls

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.7.1 M
 
 2020-6-7 Will
 * Random pan width enabled for CLI.
+* Unified CLI panning controls.
 
 2020-6-6 Will
 * Trial of PadSynth random width control done.
