--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.7.1 M
 2020-6-10 Will
 * Further work on random pan for compatibility.
   Should be complete now!
+* Found some magic numders used for 'type' :(
 
 2020-6-8 Will
 * AddVoice Listitem now sees mod oscilator.
